Software_Defined_Systems/Activity_8/service_and_database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-redis-deployment
spec:
  selector:
    matchLabels:
      app: todo-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-redis

    spec:
      containers:

      - name: todo-service
        image: natawut/todo-service:release-2.1
        ports:
          - containerPort: 8000
      - name: redis
        image: redis
